--- a/app/build.gradle
+++ b/app/build.gradle
@@ -126,4 +126,5 @@ dependencies {
     implementation("androidx.room:room-ktx:2.4.3")
     kapt("androidx.room:room-compiler:2.4.3")
     annotationProcessor("androidx.room:room-compiler:2.4.3")
+    implementation("androidx.room:room-paging:2.4.3")
 }
