--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ buildscript {
         classpath('com.android.tools.build:gradle:7.4.0')
         classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version")
         classpath('com.google.dagger:hilt-android-gradle-plugin:2.42')
+        classpath("org.jetbrains.kotlin:kotlin-serialization:1.6.10")
     }
 }
 
