--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,7 @@ android {
 dependencies {
 
     implementation(platform("androidx.compose:compose-bom:2022.10.00"))
+    implementation 'androidx.test.ext:junit-ktx:1.1.5'
     androidTestImplementation(platform("androidx.compose:compose-bom:2022.10.00"))
 
     // Testing
@@ -59,12 +60,12 @@ dependencies {
     debugImplementation("androidx.compose.ui:ui-test-manifest")
     debugImplementation("androidx.compose.ui:ui-tooling:")
     androidTestImplementation("androidx.test.espresso:espresso-core:3.5.1")
-    androidTestImplementation("androidx.test.ext:junit:1.1.3")
     androidTestImplementation("androidx.compose.ui:ui-test-junit4")
     testImplementation("com.squareup.okhttp3:mockwebserver:4.10.0")
     testImplementation("org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4")
     testImplementation("org.mockito:mockito-core:3.11.2")
     testImplementation("org.mockito:mockito-inline:3.11.2")
+    androidTestImplementation("org.mockito:mockito-android:3.3.3")
     testImplementation("androidx.arch.core:core-testing:2.1.0")
 
     implementation("androidx.core:core-ktx:1.9.0")
