--- a/app/build.gradle
+++ b/app/build.gradle
@@ -122,10 +122,10 @@ dependencies {
     implementation("androidx.hilt:hilt-navigation-compose:1.0.0")
 
     // Retrofit & Gson
-    implementation "com.squareup.retrofit2:retrofit:2.9.0"
-    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
-    implementation "com.squareup.okhttp3:logging-interceptor:4.9.2"
-    implementation "com.google.code.gson:gson:2.9.0"
+    implementation("com.squareup.retrofit2:retrofit:2.9.0")
+    implementation("com.squareup.retrofit2:converter-gson:2.9.0")
+    implementation("com.squareup.okhttp3:logging-interceptor:4.9.2")
+    implementation("com.google.code.gson:gson:2.9.0")
 
     //Room
     implementation("androidx.room:room-runtime:2.4.3")
